<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white_grey"
    android:id="@+id/findLocations"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/people_nearby"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <TextView
            style="@style/DefaultTextStyle.Small.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/margin_30dp"
            android:gravity="center"
            android:text="@string/people_nearby_description" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:orientation="vertical"
        >

        <TextView
            style="@style/DefaultTextStyle.BoldTextStyle.Big.MainTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:text="@string/people_nearby" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCompat"
            android:drawableStart="@drawable/ic_baseline_social_distance_24"
            android:drawableTint="@color/main_theme"
            android:textColor="@color/main_theme"
            android:layout_marginTop="@dimen/padding_10dp"
            android:paddingStart="@dimen/margin_30dp"
            android:paddingEnd="@dimen/padding_10dp"
            android:drawablePadding="@dimen/padding_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_me"
            app:thumbTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_dialog" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>